# linkedinFormulaire

./: .gitignore  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/apps/core/: admin.py  models.py  urls.py  views.py
backend/apps/core/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
